--- a/Manoj_page_01.html
+++ b/Manoj_page_01.html
@@ -3,6 +3,12 @@
 <head>
 	<title></title>
 	<style>
+		<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 	body
 	{
 		margin: 0;
