--- a/Manoj_page_03.html
+++ b/Manoj_page_03.html
@@ -6,7 +6,7 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Celebrate the day" />
   <meta property="og:description"   content="Celebrate the day with Hi5" />
-  <meta property="og:image"         content="https://www.your-domain.com/path/image.jpg" />
+  <meta property="og:image"         content="https://manojlestor.github.io/facebookfundays/tenor.gif" />
 	<style>
 	body
 	{
