--- a/Manoj_page_03.html
+++ b/Manoj_page_03.html
@@ -80,7 +80,7 @@
 <div class="gif">
 	<img src="tenor.gif" style="width: 60%;">
 </div>
-<div class="fb-share">
+<div class="fb-share" style="width:200px;padding:5px;margin:0 auto">
 	<div class="fb-share-button" data-href="https://manojlestor.github.io/facebookfundays/Manoj_page_03.html" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmanojlestor.github.io%2Ffacebookfundays%2FManoj_page_03.html&amp;src=sdkpreparse">Share</a></div>
 </div>
 </div>
