--- a/Manoj_page_03.html
+++ b/Manoj_page_03.html
@@ -5,7 +5,7 @@
 	<meta property="og:url"           content="https://manojlestor.github.io/facebookfundays/Manoj_page_03.html" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Celebrate the day" />
-  <meta property="og:description"   content="Celebrate the day with Hi5" />
+  <meta property="og:description"   content="WE'RE CHALLENGING YOU AND A FRIEND (OR GROUP OF FRIENDS) TO CREATE YOUR OWN HIGH-5 AS PART OF THE #HIGH5CHALLENGE" />
   <meta property="og:type:imge"     content="image/gif"
   <meta property="og:image"         content="https://manojlestor.github.io/facebookfundays/tenor.gif" />
 	<style>
