--- a/Manoj_page_04.html
+++ b/Manoj_page_04.html
@@ -66,6 +66,14 @@
 	</style>
 </head>
 <body>
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="wrapper">
 	<div class="content-0"><h1 id="national">NATIONAL HUGGING DAY</h1></div>
 	<div class="content-1"> <div class="head" style="color: #2c3d63 !important">
@@ -89,6 +97,7 @@
 	<div class="gif">
 		<img src="ter.gif">
 	</div>
+	<div class="fb-share-button" data-href="https://manojlestor.github.io/facebookfundays/Manoj_page_04.html" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmanojlestor.github.io%2Ffacebookfundays%2FManoj_page_04.html&amp;src=sdkpreparse">Share</a></div>
 </div>
 </body>
 </html>
