--- a/Manoj_page_04.html
+++ b/Manoj_page_04.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 	<title></title>
+ <meta property="og:url"           content="https://manojlestor.github.io/facebookfundays/Manoj_page_04.html" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="NATIONAL HUGGING DAY" />
+  <meta property="og:description"   content="There’s nothing more reassuring than a comforting cuddle. Hugging Day encourages you to embrace hugging, and to give those you care about a comforting squeeze." />
+  <meta property="og:image"         content="ter.gif" />
+  <meta property="og:type:imge"     content="image/gif"/>
 	<style>
 		body
 		{
