--- a/Manoj_page_05.html
+++ b/Manoj_page_05.html
@@ -53,6 +53,14 @@
 	</style>
 </head>
 <body>
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="wrapper">
 	<div class="head-1"> <h1 id="head-1-con">SLAP YOUR IRRITATING CO-WORKER DAY</h1></div>
 	<div class="pic">
@@ -70,6 +78,7 @@
 	<div class="pic-1">
 		<img src="ten.gif" style="width:200px">
 	</div>
+	<div class="fb-share-button" data-href="https://manojlestor.github.io/facebookfundays/Manoj_page_05.html" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmanojlestor.github.io%2Ffacebookfundays%2FManoj_page_05.html&amp;src=sdkpreparse">Share</a></div>
 </div>
 </body>
 </html>
