page05 meta updated

--- a/Manoj_page_05.html
+++ b/Manoj_page_05.html
@@ -2,7 +2,14 @@
 <html>
 <head>
 	<title></title>
+	<meta property="og:url"           content="https://manojlestor.github.io/facebookfundays/Manoj_page_05.html" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="SLAP YOUR IRRITATING CO-WORKER DAY" />
+  <meta property="og:description"   content="Slap Your Irritating Co-Worker Day is the day each year when those who have an irritating co-worker don't have to hold back, and have an excuse to slap the person they just can't stand." />
+  <meta property="og:type:imge"     content="image/gif"/>
+  <meta property="og:image"         content="https://manojlestor.github.io/facebookfundays/ten.gif" />
 	<style>
+
 	body
 	{
 		margin: 0;
