--- a/Manoj_page_05.html
+++ b/Manoj_page_05.html
@@ -18,7 +18,7 @@
 		.head-1>h1
 		{
 			text-align: center;
-		}
+		}`
 		.pic
 		{
 			display: grid;
@@ -85,7 +85,7 @@
 	<div class="pic-1">
 		<img src="ten.gif" style="width:200px">
 	</div>
-	<div class="fb-share-button" data-href="https://manojlestor.github.io/facebookfundays/Manoj_page_05.html" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmanojlestor.github.io%2Ffacebookfundays%2FManoj_page_05.html&amp;src=sdkpreparse">Share</a></div>
+	<div class="fb-share-button" style="width:200px;padding:5px;margin:0 auto" data-href="https://manojlestor.github.io/facebookfundays/Manoj_page_05.html" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmanojlestor.github.io%2Ffacebookfundays%2FManoj_page_05.html&amp;src=sdkpreparse">Share</a></div>
 </div>
 </body>
 </html>
