--- a/Manoj_page_04.html
+++ b/Manoj_page_04.html
@@ -103,7 +103,7 @@
 	<div class="gif">
 		<img src="ter.gif">
 	</div>
-	<center><div class="fb-share-button" style="width:200px;padding:5px;margin:0 auto" data-href="https://manojlestor.github.io/facebookfundays/Manoj_page_04.html" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmanojlestor.github.io%2Ffacebookfundays%2FManoj_page_04.html&amp;src=sdkpreparse">Share</a></div></center>
+	<div class="fb-share-button" style="width:200px;padding:5px;margin:0 auto; margin-left: 48%;" data-href="https://manojlestor.github.io/facebookfundays/Manoj_page_04.html" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmanojlestor.github.io%2Ffacebookfundays%2FManoj_page_04.html&amp;src=sdkpreparse">Share</a></div>
 </div>
 </body>
 </html>
